Fixed right alignment on h2 tagline

--- a/css/main.css
+++ b/css/main.css
@@ -144,12 +144,10 @@ h2 {
 
 h2.tagline {
     font-size: 30px;
-    text-align: center;
     color: #444;
     max-width: 100%;
-    padding: 0 1rem;
+    padding: 0 .6rem;
 }
-
 
 h3 {
     font-family: "canada-type-gibson-1", "canada-type-gibson-2", sans-serif;
@@ -372,6 +370,10 @@ h1#logo {
     line-height: 46px;
     margin: 0;
     
+}
+
+.home-tagline {
+    text-align: center;
 }
 
 #logo a {
@@ -924,7 +926,6 @@ footer a:hover {
 
     h2.tagline {
     font-size: 30px;
-    text-align: right;
     }
     
     #logo {
@@ -960,6 +961,7 @@ footer a:hover {
     }
 
     .home-tagline {
+        text-align: right;
         max-width: 660px;
         font-size: 40px;
         margin-left: auto;
@@ -1072,7 +1074,6 @@ footer a:hover {
     h2.tagline {
     font-size: 36px;
     color: #444;
-    text-align: right;
     }
     
     
